# order/endpoint.go
@@ -44,6 +44,13 @@ type deleteOrderRequest struct {
 	OrderId string
 }
 
+// @Summary Order By Id
+// @Tags Orders
+// @Accept json
+// @Produce json
+// @Param id path int true "Order Id"
+// @Success 200 {object} order.OrderItem "ok"
+// @Router /orders{id} [get]
 func makeGetOrderByIdEndpoint(s Service) endpoint.Endpoint {
 	getOrderByIdEndPoint := func(ctx context.Context, request interface{}) (interface{}, error) {
 		req := request.(getOrderByIdRequest)
@@ -54,6 +61,13 @@ func makeGetOrderByIdEndpoint(s Service) endpoint.Endpoint {
 	return getOrderByIdEndPoint
 }
 
+// @Summary Lista de Ordenes
+// @Tags Orders
+// @Accept json
+// @Produce json
+// @Param request body order.getOrdersRequest true "User Data"
+// @Success 200 {object} order.OrderList "ok"
+// @Router /orders/paginated [post]
 func makeGetOrdersEndpoint(s Service) endpoint.Endpoint {
 	getOrdersEndPoint := func(ctx context.Context, request interface{}) (interface{}, error) {
 		req := request.(getOrdersRequest)
@@ -64,6 +78,13 @@ func makeGetOrdersEndpoint(s Service) endpoint.Endpoint {
 	return getOrdersEndPoint
 }
 
+// @Summary Insertar Orden
+// @Tags Orders
+// @Accept json
+// @Produce json
+// @Param request body order.addOrderRequest true "User data"
+// @Success 200 {integer} int "ok"
+// @Router /orders/ [post]
 func makeAddOrderEndpoint(s Service) endpoint.Endpoint {
 	addOrderEndPoint := func(ctx context.Context, request interface{}) (interface{}, error) {
 		req := request.(addOrderRequest)
@@ -74,6 +95,13 @@ func makeAddOrderEndpoint(s Service) endpoint.Endpoint {
 	return addOrderEndPoint
 }
 
+// @Summary Actualizar Orden
+// @Tags Orders
+// @Accept json
+// @Produce json
+// @Param request body order.addOrderRequest true "User data"
+// @Success 200 {integer} int "ok"
+// @Router /orders/ [put]
 func makeUpdateOrderEndpoint(s Service) endpoint.Endpoint {
 	updateOrderEndPoint := func(ctx context.Context, request interface{}) (interface{}, error) {
 		req := request.(addOrderRequest)
@@ -84,6 +112,13 @@ func makeUpdateOrderEndpoint(s Service) endpoint.Endpoint {
 	return updateOrderEndPoint
 }
 
+// @Summary Eliminar Detal de la Orden
+// @Tags Orders
+// @Accept json
+// @Produce json
+// @Param orderDetailId path int true "Order Detail ID"
+// @Success 200 {integer} int "ok"
+// @Router /orders/{orderId}/detail/{orderDetailId} [delete]
 func makeDeleteOrderDetailEndpoint(s Service) endpoint.Endpoint {
 	deleteOrderDetailEndPoint := func(ctx context.Context, request interface{}) (interface{}, error) {
 		req := request.(deleteOrderDetailRequest)
@@ -94,6 +129,13 @@ func makeDeleteOrderDetailEndpoint(s Service) endpoint.Endpoint {
 	return deleteOrderDetailEndPoint
 }
 
+// @Summary Eliminar Orden
+// @Tags Orders
+// @Accept json
+// @Produce json
+// @Param id path int true "Order ID"
+// @Success 200 {integer} int "ok"
+// @Router /orders/{id} [delete]
 func makeDeleteOrderEndpoint(s Service) endpoint.Endpoint {
 	deleteOrderEndPoint := func(ctx context.Context, request interface{}) (interface{}, error) {
 		req := request.(deleteOrderRequest)
